# politic-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
docs/: Company_Economy_Design.md  Country_System_Architecture.md  current_task.md
include/: politic_game.h
include/Economy/: CCompany.h  CEconomyManager.h  ECompanyTypes.h  SCompanyAttributes.h  SCompanyState.h  SMacroState.h  SPolicyParams.h
include/Time/: CGameClock.h  CTimeManager.h  CTimeScale.h  CTimeUnits.h
src/: CMakeLists.txt  main.cpp  politic_game.cpp
src/Economy/: CCompany.cpp  CEconomyManager.cpp
src/Time/: CGameClock.cpp  CTimeManager.cpp  CTimeScale.cpp  CTimeUnits.cpp
